<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_custom_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="abdelazizmaher17499@gmail.com">abdelaziz</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>py_pkg_ws</exec_depend>
  <exec_depend>cpp_pkg_ws</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>py_turtlesim_catch_them_all</exec_depend>
  <exec_depend>cpp_turtlesim_catch_them_all</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
